# PinPoint-video

./: .env.example  .gitignore  LICENSE  README.md  README_ja.md  README_zh.md  commit_msg.txt  pyproject.toml
.cursor/commands/: add-issue.md  commit-only.md  commit-push-pr.md  commit-push.md
.cursor/rules/: behaviour-consultative-interaction.mdc  code-quality.mdc  work-logging.mdc
.streamlit/: config.toml
app/: main.py
config/: __init__.py  settings.py
docs/: AGENT_WORK_LOG.md  PITCH_OVERVIEW.md  pinpoint_video_spec_v1.1.md
src/: __init__.py
src/application/interfaces/: __init__.py  llm_client.py  subtitle_fetcher.py  video_extractor.py  vlm_client.py  youtube_searcher.py
src/application/usecases/: __init__.py  extract_segments.py
src/domain/: __init__.py  entities.py  exceptions.py  time_utils.py
src/infrastructure/: __init__.py  gemini_llm_client.py  gemini_vlm_client.py  logging_config.py  retry.py  session_storage.py  youtube_data_api.py  youtube_transcript.py  ytdlp_extractor.py
tests/unit/: test_entities.py  test_time_utils.py
